// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checked switch 1`] = `
"<b-input-switch name=\\"switch_1\\" checked=\\"\\">
    <label>
        <input name=\\"switch_1\\" type=\\"checkbox\\" checked=\\"\\">
        <b-input-switch--icon></b-input-switch--icon>
        <slot></slot>
    </label>
</b-input-switch>"
`;

exports[`Unchecked switch 1`] = `
"<b-input-switch name=\\"switch_2\\">
    <label>
        <input name=\\"switch_2\\" type=\\"checkbox\\">
        <b-input-switch--icon></b-input-switch--icon>
        <slot>switch button</slot>
    </label>
</b-input-switch>"
`;
